--- a/_data/team.yml
+++ b/_data/team.yml
@@ -27,7 +27,7 @@
   orcid: 0000-0002-8442-8025
   email: peter.desmet@inbo.be
   researchgate: Peter-Desmet
-  mastodon: https://mastodon.social/@peterdesmet
+  bluesky: peterdesmet.bsky.social
   github: peterdesmet
 
 - name: Andrew Farnsworth
