--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,12 @@ author: HiRAD partners
 
 # SOCIAL PROFILES
 social:
-  github: aloftdata
+  github: aloftdata/hirad
 
 # THEME SETTINGS
 theme: minima # Fallback theme
-remote_theme: peterdesmet/petridish@3.0
+remote_theme: peterdesmet/petridish@3.1
 posts_on_home: false
-tweets_on_home: false
 archive_permalink: /news/
 github_edit: true
 colors:
