--- a/_data/team.yml
+++ b/_data/team.yml
@@ -137,7 +137,7 @@
 - name: Benjamin Rutschmann
   image: assets/images/benjamin-rutschmann.jpg
   description: >
-    Benjamin is an entomologist based at [Agroscope](https://agroscope.admin.ch/agroscope/en/home.html), where he uses small-scale radars to unravel the links between insect biomass, activity, and land use intensity. He earned his Ph.D. from the University of Würzburg, specializing in the ecology of honeybees, particularly those living in the wild. His current work at Agroscope is dedicated to understanding how environmental factors shape the diverse populations of insects, aiming to shed light on these vital yet often overlooked contributors to our ecosystems.
+    Benjamin is an entomologist based at [Agroscope](https://www.agroscope.admin.ch/), where he uses small-scale radars to unravel the links between insect biomass, activity, and land use intensity. He earned his Ph.D. from the University of Würzburg, specializing in the ecology of honeybees, particularly those living in the wild. His current work at Agroscope is dedicated to understanding how environmental factors shape the diverse populations of insects, aiming to shed light on these vital yet often overlooked contributors to our ecosystems.
   orcid: 0000-0001-6589-6408
   email: benjamin.rutschmann@agroscope.admin.ch
   researchgate: Benjamin-Rutschmann
