--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: HiRAD partners
 
 # SOCIAL PROFILES
 social:
-  github: aloftdata/hirad
+  github: aloftdata/hirad.science
 
 # THEME SETTINGS
 theme: minima # Fallback theme
