--- a/_data/team.yml
+++ b/_data/team.yml
@@ -59,7 +59,7 @@
   email: b.d.hoekstra@uva.nl
   researchgate: Bart-Hoekstra-2
   googlescholar: ccuIbKQAAAAJ
-  twitter: barthoekstra
+  bluesky: barthoekstra.bsky.social
   github: barthoekstra
 
 - name: Pieter Huybrechts
