Add bluesky for @BirgenH

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -48,7 +48,7 @@
   email: birgen.haest@vogelwarte.ch
   researchgate: Birgen-Haest
   googlescholar: XFmZMR0AAAAJ
-  twitter: Birgen_Haest
+  bluesky: birgenhaest.bsky.social
   github: BirgenH
 
 - name: Bart Hoekstra
