Add bluesky @jshamoun

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -142,7 +142,7 @@
   email: j.z.shamoun-baranes@uva.nl
   researchgate: Judy-Shamoun-Baranes
   googlescholar: qLNgmJkAAAAJ
-  twitter: BaranesJudy
+  bluesky: judyshamounb.bsky.social
 
 - name: Hans van Gasteren
   image: assets/images/hans-van-gasteren.jpg
