Add bluesky @CeciliaNilsson709

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -123,6 +123,7 @@
   researchgate: Cecilia-Nilsson-8
   googlescholar: A-9PdlkAAAAJ
   github: cecilianilsson709
+  bluesky: cnilsson.science
 
 - name: Benjamin Rutschmann
   image: assets/images/benjamin-rutschmann.jpg
