Link footer to Biodiversa+ page for HiRAD

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -44,7 +44,7 @@ columns:
 #      href: https://www.lunduniversity.lu.se/
 #      new_window: true
   - description: >
-     HiRAD is funded through the [2022-2023 Biodiversa+ BiodivMon call](https://www.biodiversa.eu/2022/10/07/2022-2023-joint-call/) for research proposals, with the funding organisations Swiss National Science Foundation (SNF 31BD30_216840), Belgian Federal Science Policy Office (BelSPO RT/24/HiRAD), Netherlands Organisation for Scientific Research (NWO EP.1512.22.003), and Academy of Finland (aka 359864).
+      [HiRAD](https://www.biodiversa.eu/2024/04/15/hirad/) is funded through the [2022-2023 Biodiversa+ BiodivMon call](https://www.biodiversa.eu/2022/10/07/2022-2023-joint-call/) for research proposals, with the funding organisations Swiss National Science Foundation (SNF 31BD30_216840), Belgian Federal Science Policy Office (BelSPO RT/24/HiRAD), Netherlands Organisation for Scientific Research (NWO EP.1512.22.003), and Academy of Finland (aka 359864).
 
 # License
 license: >
