Update description for Eva

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -80,7 +80,7 @@
 - name: Eva Knop
   image: assets/images/eva-knop.jpg
   description: >
-    Eva studies the ecological consequences of global land-use and climate change, with a particular focus on insects. On the one hand, she is interested in the large-scale spatio-temporal patterns and processes of those changes within and across ecosystems. On the other hand, on a smaller scale she studies the underlying mechanisms of the changes in an experimental way. Eva Knop is based at [Agroscope](https://www.agroscope.admin.ch/) and associated with the [University of Zürich](https://www.knoplab.ch).
+    [Eva](https://www.knoplab.ch) studies biodiversity, species interactions, and ecosystem functioning across different spatio-temporal scales and in a global change, with a particular focus on insects. Eva is full professor for Conservation Biology at the University of Regensburg and adjunct professor for Biodiversity and Global Change at the University of Zurich.
   orcid: 0000-0001-9402-2216
   email: eva.knop@ieu.uzh.ch
   researchgate: E-Knop
